--- a/css/style.css
+++ b/css/style.css
@@ -5,32 +5,48 @@
   
   }
   #header {
+    position: fixed;
+    top:0;
+    width: 100%;
+    height: 10%;
     display:flex;
-    
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 50px;
   }
   
   #header-img {
     width:50px;
     cursor:pointer;
   }
+
   
-  #nav-bar {
-    position: fixed;
-    top:0px;
-    display:flex;
-    width:100%;
-    justify-content:space-between;
+  #nav-bar ul li{
+    display: inline;
+  
     overflow:hidden;
-  
+    list-style-type: none;
   }
   
   .nav-link {
     text-decoration: none;
+    padding-right: 20px;
     color:#000000;
-    font-size:15px;
+    font-size:large;
     float: left;
   }
-
+  .nav-link:hover{
+    color: bisque;
+  }
+#container{
+  padding-top:100px;
+  width: 40%;
+  margin: 0 auto;
+  
+}
+#form_section{
+  padding: 90px;
+}
   @media (min-width: 1200px){
     body{
         background-color: blueviolet;
