edited page styling

--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,95 @@
 * {
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-  
-  }
-  #header {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    line-height: 1.5;
+}
+
+#header {
     position: fixed;
-    top:0;
+    top: 0;
     width: 100%;
     height: 10%;
-    display:flex;
+    display: flex;
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    justify-content: space-between;
+}
+
+#header-img {
+    width: 50px;
+    cursor: pointer;
+}
+
+
+#nav-bar {
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 50px;
-  }
-  
-  #header-img {
-    width:50px;
-    cursor:pointer;
-  }
+    overflow: hidden;
 
-  
-  #nav-bar ul li{
-    display: inline;
-  
-    overflow:hidden;
+    overflow: hidden;
     list-style-type: none;
-  }
-  
-  .nav-link {
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-link {
     text-decoration: none;
     padding-right: 20px;
-    color:#000000;
-    font-size:large;
+    color: #000000;
+    font-size: large;
     float: left;
-  }
-  .nav-link:hover{
-    color: bisque;
-  }
-#container{
-  padding-top:100px;
-  width: 40%;
-  margin: 0 auto;
-  
+    margin: 1.2rem;
+
 }
-#form_section{
-  padding: 90px;
+
+.form_section {
+    text-align: center;
 }
-  @media (min-width: 1200px){
-    body{
-        background-color: blueviolet;
+
+#container {
+    max-width: 800px;
+    margin: 3rem auto 0;
+    overflow: hidden;
+}
+
+input#email {
+    width: 50%;
+    height: 1.9rem;
+    margin: auto;
+    display: flex;
+    padding: 2rem auto;
+}
+
+
+
+.btn {
+    display: inlne-block;
+    padding: 0.5rem 1.5rem;
+    color: #444;
+    text-transform: uppercase;
+    font-weight: bold;
+    background-color: #f1bdfe;
+    width: 20%;
+    margin: 10px 0;
+
+}
+
+#how_it_works {
+    text-align: center;
+}
+
+@media (min-width: 1200px) {
+    body {
+        background-color: rgb(198, 144, 144);
     }
-  }
+}
